--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "log4js": "^0.6.36",
     "morgan": "~1.6.1",
     "pg-promise": "^4.4.6",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "graphlib": "2.1.1",
+    "lodash": "4.17.4"
   },
   "devDependencies": {
     "jasmine": "3.3.0"
