--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "pg-promise": "^4.4.6",
     "serve-favicon": "~2.3.0",
     "graphlib": "2.1.1",
-    "lodash": "4.17.4"
+    "lodash": "4.17.4",
+    "octopus-modules": "~0.0.1",
+    "depcheck": "0.6.7"
   },
   "devDependencies": {
     "jasmine": "3.3.0"
