--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "lodash": "4.17.4",
     "octopus-modules": "~0.0.1",
     "depcheck": "0.6.7",
-    "handlebars": "4.0.10"
+    "handlebars": "4.0.10",
+    "stringstream": "0.0.1"
   },
   "devDependencies": {
     "jasmine": "3.3.0"
